--- a/app/views/noticias/noticia.ejs
+++ b/app/views/noticias/noticia.ejs
@@ -49,7 +49,7 @@
         <div class="col-md-12">
             <div class="noticia_wrapper">
                 <span class="noticia_autor"><%= noticia[0].autor %></span>
-                <a href="noticia?id=<%= noticia[0].id %>" class="noticia_titulo"><%= noticia[0].titulo %></a>
+                <a href="noticia?id_noticia=<%= noticia[0].id_noticia %>" class="noticia_titulo"><%= noticia[0].titulo %></a>
                 <span class="noticia_data"><%= noticia[0].data_noticia %></span>
                 <br/>
                 <p class="noticia_resumo">
